--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <table style="font-family:arial;" bgcolor="#FFFFFF" align="center" border="1" width:="10%">
 	<caption><b>Industry Revenue Changes</b></caption>
 	<tr>
-		<th colspan="0"><b>2013</b></th>
-		<th><b>2018</b></th>
+		<th colgroup="2"><b>2013</b></th>
+		<th> colgroup="3"><b>2018</b></th>
 	</tr>
 	<tr>
 		<td>Revenue</td>
