--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<caption><b>Industry Revenue Changes</b></caption>
 	<tr>
 		<th colgroup="2"><b>2013</b></th>
-		<th> colgroup="3"><b>2018</b></th>
+		<th colgroup="3"><b>2018</b></th>
 	</tr>
 	<tr>
 		<td>Revenue</td>
