--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</tr>
 	<tr>
 		<td>Revenue</td>
-		<td>33.7b</td>
-		<td>35b</td>
+		<td>33.7 Billion</td>
+		<td>35 Billion</td>
 	</tr>
 	<tr>
 		<td>Businesses</td>
