--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	</tr>
 	</table>
 <a href="https://www.stmarysgoodsam.org/services/rehabilitation/swing-bed-program/">To find out more about this program, click here!</a>
+<button class="btn" style="float:right">Click me</button
  <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
       src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"></a>
