--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
 	<title>St. Mary's Good Samaritan Hospital:Swing Bed Program</title>  
-		<style type="text/css"> 
+		<style type="text/css">.myTable { background-color:#eee;border-collapse:collapse; }
+.myTable th { background-color:#000;color:white;width:50%; }
+.myTable td, .myTable th { padding:5px;border:1px solid #000; }
 	</style>
 </head> 
 <body style="background-color:#66CCFF;">
