--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ img {
     <a href="https://www.stmarysgoodsam.org/services/">Other Services</a>
   </div>
 </div>   
-<table style="background-color:#CCCCCC">
+<table style="background-color:#FFFF99" align="center">
 	<caption><b>Industry Revenue Changes</b></caption>
 	<tr>
 		<th></th>
