--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
-table {
-    border-collapse: collapse;
-}
 table.center {
 	margin-left:auto;
 	margin-right:auto;
     border: 1px solid black;
+    border-collapse: collapse;
 }
 img {
     display: block;
@@ -62,11 +60,11 @@ img {
 </head>
 <body style="background-color:#66CCFF">
 	<h1 style="text-align:center;">St. Mary's Good Samaritan Hospital:Swing Bed Program</h1>
-<p>style="font-family:verdana;">St. Mary's Good Samaritan Hospital is a critical care facility located in Greensboro, Georgia. This hospital is a member of the Trinity Health System, a Catholic-based system operating 93 hospitals in 22 states. Good Samaritan acts as a sister facility to St. Mary's here in Athens, meaning patients get transferred between these two facilities for treatment and rehabilitation programs.</p>
+<p style="font-family:verdana;">St. Mary's Good Samaritan Hospital is a critical care facility located in Greensboro, Georgia. This hospital is a member of the Trinity Health System, a Catholic-based system operating 93 hospitals in 22 states. Good Samaritan acts as a sister facility to St. Mary's here in Athens, meaning patients get transferred between these two facilities for treatment and rehabilitation programs.</p>
 	<div><img src="st marys.jpg" width="350" height="300" alt="Good Samaritan"></div>	
-<p>style="font-family:verdana;">Good Samaritan is smaller than the Athens branch, only containing an ER, an OR, and a Med/Surg unit. This facility also offers outpatient procedures such as rabies shots or infusions. What makes Good Samaritan special is their Swing Bed program. This program allows patients who are either recovering from surgery or illness to regain their strength in a hospital setting while still practicing independence.</p>	
+<p style="font-family:verdana;">Good Samaritan is smaller than the Athens branch, only containing an ER, an OR, and a Med/Surg unit. This facility also offers outpatient procedures such as rabies shots or infusions. What makes Good Samaritan special is their Swing Bed program. This program allows patients who are either recovering from surgery or illness to regain their strength in a hospital setting while still practicing independence.</p>	
 	<div><img src="swingbed.jpg" width="350" height="300" alt="Swing Bed program patient"></div>
-<p>style="font-family:verdana;">Good Samaritan receieves patients from all over the state who want to participate in the program. Because Good Samaritan is a critical access hospital, rooms are very limited. A critical access hospital receives special funding from the state, so they must meet certain requirements. Good Samaritan is a 25 bed unit, so the hospital can only hold 25 patients in-house at one time. This makes admission to the program very competitive. Once patients are accepted, they can stay at the hospital as long as their insurance company allows. Sometimes patients will stay for up to two months. Physical Therapy rehabilitation programs like this one are becoming more common in the healthcare system. With Alzheimer's on the rise, physical therapy and other rehabilitaion programs are crucial for their care. In the past five years alone, physical therapy revenue in the United States has increased by almost 4%, along with a 2.7% increase in physical therapy businesses and a 2.4% increase of employees.	
+<p style="font-family:verdana;">Good Samaritan receieves patients from all over the state who want to participate in the program. Because Good Samaritan is a critical access hospital, rooms are very limited. A critical access hospital receives special funding from the state, so they must meet certain requirements. Good Samaritan is a 25 bed unit, so the hospital can only hold 25 patients in-house at one time. This makes admission to the program very competitive. Once patients are accepted, they can stay at the hospital as long as their insurance company allows. Sometimes patients will stay for up to two months. Physical Therapy rehabilitation programs like this one are becoming more common in the healthcare system. With Alzheimer's on the rise, physical therapy and other rehabilitaion programs are crucial for their care. In the past five years alone, physical therapy revenue in the United States has increased by almost 4%, along with a 2.7% increase in physical therapy businesses and a 2.4% increase of employees.	
 <div class="dropdown">
   <button class="dropbtn">Click here for more info!</button>
   <div class="dropdown-content">
