--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 table.center {
 	margin-left:auto;
 	margin-right:auto;
+}
+table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
